Fix an image overlapping the box border

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ a,
 }
 
 .box-image {
+  overflow: hidden;
   height: 200px;
   margin-bottom: 12px;
   border: 4px solid var(--cta-blue);
